added connection pooling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,10 +7,12 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-     <form action="10001/ReviewVideo/Bedroom" method="post" enctype="multipart/form-data">
+     <form action="8840726/ReviewVideo/443280/Location/Bar" method="post" enctype="multipart/form-data">
 	<label for="file">Filename:</label>
 <input type="hidden" name="stars" value=3>
-<input type="file" name="file" id="file" enctype="multipart/form-data"><br>
+<input type ="hidden" name="comment", value="This is a good place to stay">
+<input type="file" name="video" id="video" enctype="multipart/form-data"><br>
+<input type="file" name="room_img" id="room_img" enctype="multipart/form-data"><br>
 <input type="submit" name="submit" value="Submit">
      </form>
   </body>
